# YourMemory

./: .env.example  .gitignore  BENCHMARKS.md  Dockerfile  MEMORY_RULES.md  README.md  docker-compose.yml  index.html  memory_mcp.py  pyproject.toml  server.json  setup.sh  sitemap.xml
.github/workflows/: docker-publish.yml
agents/: coding_agent.md  research_agent.md  review_agent.md
benchmarks/: docker-compose.zep.yml  locomo.py  locomo_4way.py  locomo_4way_results.json  locomo_fullstack.py  locomo_qa_model.py  locomo_real.py  locomo_supermemory.py  locomo_zep.py  longmemeval_fullstack.py  longmemeval_official.py  run_all.py  stale_memory.py  token_efficiency.py  two_session_comparison.py  workflow_comparison.py
scripts/: reembed.py
src/: app.py
src/db/: connection.py  duckdb_schema.sql  migrate.py  schema.sql  sqlite_schema.sql
src/graph/: graph_store.py  networkx_backend.py
src/jobs/: decay_job.py
src/routes/: agents.py  graph_viz.py  memories.py  retrieve.py  ui.py
src/services/: agent_registry.py  decay.py  embed.py  resolve.py  retrieve.py
tests/: test_features.py
worker/: valtown_endpoint.ts
